# cppp.base

./: .gitignore  .gitmodules  CMakeLists.txt  a.cpp
include/cpppbase/: cpppcharset.hpp  cpppconfig.h  cpppmem.hpp  mincpppdef.h
src/cpppbase/: cpppcharset.cpp
